--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-web3==5.26.0
+eventlet==0.30.2
 Flask==2.0.2
 gunicorn==20.1.0
-eventlet==0.30.2
+psycopg2-binary==2.9.3
 pydantic==1.9.0
-eventlet==0.30.2
-
+rich==11.1.0
+SQLAlchemy==1.4.31
+web3==5.26.0
